fix(styles): fix broken style issues

--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
@@ -176,7 +176,7 @@ Last change:    18/02/2015
       margin-left: -1px;
     }
     a, button {
-      font-size: ;
+      font-size: inherit;
       color: #ccc;
       font-weight: lighter;
       text-align: center;
